[package]
name = "rusty_orbital_dynamics"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Sorensen <sorensenjacob44@gmail.com>"]
description = "High-performance orbital dynamics in Rust + Python"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/JacobASorensen/rusty-orbital-dynamics"
keywords = ["orbital", "dynamics", "python"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]  # for Python compatibility

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }

[package.metadata.maturin]
name = "rusty_orbital_dynamics"