[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "rusty_orbital_dynamics"
version = "0.1.0"
description = "High-performance orbital dynamics in Rust + Python"
authors = [{name = "Jacob Sorensen", email = "sorensenjacob44@gmail.com"}]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/JacobASorensen/rusty-orbital-dynamics"
Issues = "https://github.com/JacobASorensen/rusty-orbital-dynamics"
